# omp-node

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
native/: CMakeLists.txt
native/src/: CMakeLists.txt  Socket.cpp  Socket.hpp  main.cpp
src/: CMakeLists.txt  bootstrap.hpp  common.hpp  logger.cpp  logger.hpp  main.cpp  nodeimpl.cpp  nodeimpl.hpp  print_exception.cpp  print_exception.hpp  resource.cpp  resource.hpp  runtime.cpp  runtime.hpp  utils.hpp  uvloop.cpp  uvloop.hpp
src/api/: API.hpp  Events.cpp  Impl.hpp  MacroMagic.hpp  Pools.hpp
src/api/Actor/: APIs.cpp
src/api/All/: APIs.cpp
src/api/Checkpoint/: APIs.cpp
src/api/Class/: APIs.cpp
src/api/Config/: APIs.cpp
src/api/Core/: APIs.cpp
src/api/CustomModel/: APIs.cpp
src/api/Dialog/: APIs.cpp
src/api/Event/: APIs.cpp
src/api/GangZone/: APIs.cpp
src/api/Menu/: APIs.cpp
src/api/NPC/: APIs.cpp
src/api/Object/: APIs.cpp
src/api/Pickup/: APIs.cpp
src/api/Player/: APIs.cpp
src/api/PlayerObject/: APIs.cpp
src/api/PlayerTextDraw/: APIs.cpp
src/api/PlayerTextLabel/: APIs.cpp
src/api/RaceCheckpoint/: APIs.cpp
src/api/Recording/: APIs.cpp
src/api/TextDraw/: APIs.cpp
src/api/TextLabel/: APIs.cpp
src/api/Vehicle/: APIs.cpp
src/converter/: actor.cpp  actor.hpp  anim.cpp  anim.hpp  class.cpp  class.hpp  entity.hpp  find_function.hpp  for_each.hpp  for_each_n.hpp  for_each_n_join.hpp  gangzone.cpp  gangzone.hpp  network.cpp  network.hpp  object.cpp  object.hpp  pickup.cpp  pickup.hpp  player.cpp  player.hpp  primitive.cpp  primitive.hpp  textlabel.cpp  textlabel.hpp  types.cpp  types.hpp  utils.hpp  vehicle.cpp  vehicle.hpp
src/helpers/: v8.hpp
src/interface/: player.cpp  player.hpp  utils.cpp  utils.hpp
src/wrapper/: METHOD_REGEXES.md  entry_handler.hpp  handlers.hpp  methods.hpp  player.cpp  player.hpp  primitive.cpp  primitive.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp
src/wrapper/actor/: actor_event_dispatcher_wrapper.cpp  actor_event_dispatcher_wrapper.hpp  actor_pool_wrapper.cpp  actor_pool_wrapper.hpp  actor_wrapper.cpp  actor_wrapper.hpp
src/wrapper/checkpoint/: checkpoint_data_base_wrapper.hpp  checkpoint_data_wrapper.cpp  checkpoint_data_wrapper.hpp  checkpoint_event_dispatcher_wrapper.cpp  checkpoint_event_dispatcher_wrapper.hpp  checkpoint_pool_wrapper.cpp  checkpoint_pool_wrapper.hpp  player_checkpoint_data_wrapper.cpp  player_checkpoint_data_wrapper.hpp  race_checkpoint_data_wrapper.cpp  race_checkpoint_data_wrapper.hpp
src/wrapper/class/: class_event_dispatcher_wrapper.cpp  class_event_dispatcher_wrapper.hpp  class_pool_wrapper.cpp  class_pool_wrapper.hpp  class_wrapper.cpp  class_wrapper.hpp  player_class_data_wrapper.cpp  player_class_data_wrapper.hpp
src/wrapper/core/: config_option_type_wrapper.hpp  config_wrapper.cpp  config_wrapper.hpp  core_wrapper.cpp  core_wrapper.hpp  player_weapon_wrapper.hpp  settable_core_data_wrapper.hpp
src/wrapper/dialog/: dialog_event_dispatcher_wrapper.cpp  dialog_event_dispatcher_wrapper.hpp  dialog_pool_wrapper.cpp  dialog_pool_wrapper.hpp  player_dialog_data_wrapper.cpp  player_dialog_data_wrapper.hpp
src/wrapper/entity/: entity_wrapper.cpp  entity_wrapper.hpp  id_provider_wrapper.cpp  id_provider_wrapper.hpp
src/wrapper/gangzone/: gangzone_event_dispatcher_wrapper.cpp  gangzone_event_dispatcher_wrapper.hpp  gangzone_pool_wrapper.cpp  gangzone_pool_wrapper.hpp  gangzone_wrapper.cpp  gangzone_wrapper.hpp
src/wrapper/gtaquat/: gtaquat_wrapper.cpp  gtaquat_wrapper.hpp
src/wrapper/menu/: menu_event_dispatcher_wrapper.cpp  menu_event_dispatcher_wrapper.hpp  menu_pool_wrapper.cpp  menu_pool_wrapper.hpp  menu_wrapper.cpp  menu_wrapper.hpp  player_menu_data_wrapper.cpp  player_menu_data_wrapper.hpp
src/wrapper/object/: object_base_wrapper.cpp  object_base_wrapper.hpp  object_event_dispatcher_wrapper.cpp  object_event_dispatcher_wrapper.hpp  object_pool_wrapper.cpp  object_pool_wrapper.hpp  object_wrapper.cpp  object_wrapper.hpp  player_object_data_wrapper.cpp  player_object_data_wrapper.hpp  player_object_wrapper.cpp  player_object_wrapper.hpp
src/wrapper/pickup/: pickup_event_dispatcher_wrapper.cpp  pickup_event_dispatcher_wrapper.hpp  pickup_pool_event_dispatcher_wrapper.cpp  pickup_pool_event_dispatcher_wrapper.hpp  pickup_pool_wrapper.cpp  pickup_pool_wrapper.hpp  pickup_wrapper.cpp  pickup_wrapper.hpp
src/wrapper/player/: player_event_dispatcher_wrapper.cpp  player_event_dispatcher_wrapper.hpp  player_pool_event_dispatcher_wrapper.cpp  player_pool_event_dispatcher_wrapper.hpp  player_pool_wrapper.cpp  player_pool_wrapper.hpp  player_update_event_dispatcher_wrapper.cpp  player_update_event_dispatcher_wrapper.hpp  player_wrapper.cpp  player_wrapper.hpp
src/wrapper/pool/: pool_event_dispatcher_wrapper.hpp  pool_wrapper.hpp  read_only_pool_wrapper.hpp
src/wrapper/textdraw/: player_textdraw_data_wrapper.cpp  player_textdraw_data_wrapper.hpp  player_textdraw_wrapper.cpp  player_textdraw_wrapper.hpp  textdraw_base_wrapper.cpp  textdraw_base_wrapper.hpp  textdraw_event_dispatcher_wrapper.cpp  textdraw_event_dispatcher_wrapper.hpp  textdraw_pool_wrapper.cpp  textdraw_pool_wrapper.hpp  textdraw_wrapper.cpp  textdraw_wrapper.hpp
src/wrapper/textlabel/: player_textlabel_data_wrapper.cpp  player_textlabel_data_wrapper.hpp  player_textlabel_wrapper.cpp  player_textlabel_wrapper.hpp  textlabel_base_wrapper.cpp  textlabel_base_wrapper.hpp  textlabel_pool_wrapper.cpp  textlabel_pool_wrapper.hpp  textlabel_wrapper.cpp  textlabel_wrapper.hpp
src/wrapper/variable/: player_variable_data_wrapper.cpp  player_variable_data_wrapper.hpp  variable_component_wrapper.cpp  variable_component_wrapper.hpp  variable_storage_base_wrapper.cpp  variable_storage_base_wrapper.hpp
src/wrapper/vehicle/: player_vehicle_data_wrapper.cpp  player_vehicle_data_wrapper.hpp  vehicle_event_dispatcher_wrapper.cpp  vehicle_event_dispatcher_wrapper.hpp  vehicle_pool_event_dispatcher_wrapper.cpp  vehicle_pool_event_dispatcher_wrapper.hpp  vehicle_pool_wrapper.cpp  vehicle_pool_wrapper.hpp  vehicle_wrapper.cpp  (+1 more)
src/wrappers/: Impl.hpp
(+22 files in other folders)
